@startuml

title __BUILDER's Class Diagram__\n

  namespace Builder {
    class Builder.BuilderPrepare {
        + Build()
        + addCheese()
        + addCrust()
        + addDough()
        + addMagic()
        + addName()
        + addSize()
        + addToppings()
    }
  }
  

  namespace Builder {
    class Builder.Pizza {
        + cheese : List<Cheese>
        + magic : List<Magic>
        + name : String
        + toppings : List<Toppings>
        + Pizza()
    }
  }
  

  namespace Builder {
    class Builder.Prepare_Method {
        {static} - instance : Prepare_Method
        + getMethod()
        {static} + getPreparationMethod()
    }
  }
  

  namespace Builder {
    class Builder.Runner {
        {static} + main()
    }
  }
  

  Builder.BuilderPrepare o-- Builder.Pizza : preparepizza
  Builder.Pizza o-- Singleton.Enum.Crust : crust
  Builder.Pizza o-- Singleton.Enum.Dough : dough
  Builder.Pizza o-- Singleton.Enum.Size : size


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
